Upload for t.maplat.jp

--- a/aizumap.html
+++ b/aizumap.html
@@ -18,11 +18,11 @@
       right: 0px;
     }
   </style>
-  <meta property="og:image" content="https://s.maplat.jp/r/aizumap/img/aizu_splash.png">
+  <meta property="og:image" content="https://t.maplat.jp/r/aizumap/img/aizu_splash.png">
   <meta name="twitter:card" content="summary">
-  <link rel="canonical" href="https://s.maplat.jp/r/aizumap/">
-  <link rel="alternate" href="https://s.maplat.jp/r/aizumap/?lang=ja" hreflang="ja">
-  <link rel="alternate" href="https://s.maplat.jp/r/aizumap/?lang=en" hreflang="en">
+  <link rel="canonical" href="https://t.maplat.jp/r/aizumap/">
+  <link rel="alternate" href="https://t.maplat.jp/r/aizumap/?lang=ja" hreflang="ja">
+  <link rel="alternate" href="https://t.maplat.jp/r/aizumap/?lang=en" hreflang="en">
   <link rel="manifest" href="./pwa/aizu_manifest.json">
   <meta property="og:title" content="ぷらっと会津若松 - 会津若松を楽しむ古地図/絵地図街歩きアプリ">
   <meta name="description" content="古地図/絵地図街歩きアプリMaplat:「ぷらっと会津若松 - 会津若松を楽しむ古地図/絵地図街歩きアプリ」版">
