--- a/himejimap.html
+++ b/himejimap.html
@@ -18,11 +18,11 @@
       right: 0px;
     }
   </style>
-  <meta property="og:image" content="https://s.maplat.jp/r/himejimap/img/himeji_splash.png">
+  <meta property="og:image" content="https://t.maplat.jp/r/himejimap/img/himeji_splash.png">
   <meta name="twitter:card" content="summary">
-  <link rel="canonical" href="https://s.maplat.jp/r/himejimap/">
-  <link rel="alternate" href="https://s.maplat.jp/r/himejimap/?lang=ja" hreflang="ja">
-  <link rel="alternate" href="https://s.maplat.jp/r/himejimap/?lang=en" hreflang="en">
+  <link rel="canonical" href="https://t.maplat.jp/r/himejimap/">
+  <link rel="alternate" href="https://t.maplat.jp/r/himejimap/?lang=ja" hreflang="ja">
+  <link rel="alternate" href="https://t.maplat.jp/r/himejimap/?lang=en" hreflang="en">
   <link rel="manifest" href="./pwa/himeji_manifest.json">
   <meta property="og:title" content="ぷらっと姫路 - 姫路を楽しむ古地図/絵地図街歩きアプリ">
   <meta name="description" content="古地図/絵地図街歩きアプリMaplat:「ぷらっと姫路 - 姫路を楽しむ古地図/絵地図街歩きアプリ」版">
