--- a/kyobatemap.html
+++ b/kyobatemap.html
@@ -18,11 +18,11 @@
       right: 0px;
     }
   </style>
-  <meta property="og:image" content="https://s.maplat.jp/r/kyobatemap/pwa/sample/apple-splash-1334-750.png">
+  <meta property="og:image" content="https://t.maplat.jp/r/kyobatemap/pwa/sample/apple-splash-1334-750.png">
   <meta name="twitter:card" content="summary">
-  <link rel="canonical" href="https://s.maplat.jp/r/kyobatemap/">
-  <link rel="alternate" href="https://s.maplat.jp/r/kyobatemap/?lang=ja" hreflang="ja">
-  <link rel="alternate" href="https://s.maplat.jp/r/kyobatemap/?lang=en" hreflang="en">
+  <link rel="canonical" href="https://t.maplat.jp/r/kyobatemap/">
+  <link rel="alternate" href="https://t.maplat.jp/r/kyobatemap/?lang=ja" hreflang="ja">
+  <link rel="alternate" href="https://t.maplat.jp/r/kyobatemap/?lang=en" hreflang="en">
   <link rel="manifest" href="./pwa/kyobate_manifest.json">
   <meta property="og:title" content="京終駅転車台">
   <meta name="description" content="古地図/絵地図街歩きアプリMaplat:「京終駅転車台」版">
