--- a/nagahamamap.html
+++ b/nagahamamap.html
@@ -13,11 +13,11 @@
       right: 0px;
     }
   </style>
-  <meta property="og:image" content="https://s.maplat.jp/r/nagahamamap/img/nagahama_splash.png">
+  <meta property="og:image" content="https://t.maplat.jp/r/nagahamamap/img/nagahama_splash.png">
   <meta name="twitter:card" content="summary">
-  <link rel="canonical" href="https://s.maplat.jp/r/nagahamamap/">
-  <link rel="alternate" href="https://s.maplat.jp/r/nagahamamap/?lang=ja" hreflang="ja">
-  <link rel="alternate" href="https://s.maplat.jp/r/nagahamamap/?lang=en" hreflang="en">
+  <link rel="canonical" href="https://t.maplat.jp/r/nagahamamap/">
+  <link rel="alternate" href="https://t.maplat.jp/r/nagahamamap/?lang=ja" hreflang="ja">
+  <link rel="alternate" href="https://t.maplat.jp/r/nagahamamap/?lang=en" hreflang="en">
   <link rel="manifest" href="./pwa/nagahama_manifest.json">
   <meta property="og:title" content="ぷらっと長浜・竹生島 - 長浜・竹生島を楽しむ古地図/絵地図街歩きアプリ">
   <meta name="description" content="古地図/絵地図街歩きアプリMaplat:「ぷらっと長浜・竹生島 - 長浜・竹生島を楽しむ古地図/絵地図街歩きアプリ」版">
