--- a/sakaimap.html
+++ b/sakaimap.html
@@ -18,11 +18,11 @@
       right: 0px;
     }
   </style>
-  <meta property="og:image" content="https://s.maplat.jp/r/sakaimap/img/sakai_splash.png">
+  <meta property="og:image" content="https://t.maplat.jp/r/sakaimap/img/sakai_splash.png">
   <meta name="twitter:card" content="summary">
-  <link rel="canonical" href="https://s.maplat.jp/r/sakaimap/">
-  <link rel="alternate" href="https://s.maplat.jp/r/sakaimap/?lang=ja" hreflang="ja">
-  <link rel="alternate" href="https://s.maplat.jp/r/sakaimap/?lang=en" hreflang="en">
+  <link rel="canonical" href="https://t.maplat.jp/r/sakaimap/">
+  <link rel="alternate" href="https://t.maplat.jp/r/sakaimap/?lang=ja" hreflang="ja">
+  <link rel="alternate" href="https://t.maplat.jp/r/sakaimap/?lang=en" hreflang="en">
   <link rel="manifest" href="./pwa/sakai_manifest.json">
   <meta property="og:title" content="ぷらっと堺 - 堺を楽しむ古地図/絵地図街歩きアプリ">
   <meta name="description" content="古地図/絵地図街歩きアプリMaplat:「ぷらっと堺 - 堺を楽しむ古地図/絵地図街歩きアプリ」版">
