--- a/samplat.html
+++ b/samplat.html
@@ -13,11 +13,11 @@
       right: 0px;
     }
   </style>
-  <meta property="og:image" content="https://s.maplat.jp/r/samplat/img/samplat_splash.png">
+  <meta property="og:image" content="https://t.maplat.jp/r/samplat/img/samplat_splash.png">
   <meta name="twitter:card" content="summary">
-  <link rel="canonical" href="https://s.maplat.jp/r/samplat/">
-  <link rel="alternate" href="https://s.maplat.jp/r/samplat/?lang=ja" hreflang="ja">
-  <link rel="alternate" href="https://s.maplat.jp/r/samplat/?lang=en" hreflang="en">
+  <link rel="canonical" href="https://t.maplat.jp/r/samplat/">
+  <link rel="alternate" href="https://t.maplat.jp/r/samplat/?lang=ja" hreflang="ja">
+  <link rel="alternate" href="https://t.maplat.jp/r/samplat/?lang=en" hreflang="en">
   <link rel="manifest" href="./pwa/samplat_manifest.json">
   <meta property="og:title" content="さんぷらっと">
   <meta name="description" content="古地図/絵地図街歩きアプリMaplat:「さんぷらっと」版">
