--- a/samplemap.html
+++ b/samplemap.html
@@ -18,11 +18,11 @@
       right: 0px;
     }
   </style>
-  <meta property="og:image" content="https://s.maplat.jp/r/samplemap/pwa/sample/apple-splash-1334-750.png">
+  <meta property="og:image" content="https://t.maplat.jp/r/samplemap/pwa/sample/apple-splash-1334-750.png">
   <meta name="twitter:card" content="summary">
-  <link rel="canonical" href="https://s.maplat.jp/r/samplemap/">
-  <link rel="alternate" href="https://s.maplat.jp/r/samplemap/?lang=ja" hreflang="ja">
-  <link rel="alternate" href="https://s.maplat.jp/r/samplemap/?lang=en" hreflang="en">
+  <link rel="canonical" href="https://t.maplat.jp/r/samplemap/">
+  <link rel="alternate" href="https://t.maplat.jp/r/samplemap/?lang=ja" hreflang="ja">
+  <link rel="alternate" href="https://t.maplat.jp/r/samplemap/?lang=en" hreflang="en">
   <link rel="manifest" href="./pwa/sample_manifest.json">
   <meta property="og:title" content="盛岡市古地図アプリ">
   <meta name="description" content="古地図/絵地図街歩きアプリMaplat:「盛岡市古地図アプリ」版">
