--- a/tamachimitamap.html
+++ b/tamachimitamap.html
@@ -13,11 +13,11 @@
       right: 0px;
     }
   </style>
-  <meta property="og:image" content="https://s.maplat.jp/r/tamachimitamap/img/tamachimita_splash.png">
+  <meta property="og:image" content="https://t.maplat.jp/r/tamachimitamap/img/tamachimita_splash.png">
   <meta name="twitter:card" content="summary">
-  <link rel="canonical" href="https://s.maplat.jp/r/tamachimitamap/">
-  <link rel="alternate" href="https://s.maplat.jp/r/tamachimitamap/?lang=ja" hreflang="ja">
-  <link rel="alternate" href="https://s.maplat.jp/r/tamachimitamap/?lang=en" hreflang="en">
+  <link rel="canonical" href="https://t.maplat.jp/r/tamachimitamap/">
+  <link rel="alternate" href="https://t.maplat.jp/r/tamachimitamap/?lang=ja" hreflang="ja">
+  <link rel="alternate" href="https://t.maplat.jp/r/tamachimitamap/?lang=en" hreflang="en">
   <link rel="manifest" href="./pwa/tamachimita_manifest.json">
   <meta property="og:title" content="ぷらっと田町・三田 - 田町・三田を楽しむ古地図/絵地図街歩きアプリ">
   <meta name="description" content="古地図/絵地図街歩きアプリMaplat:「ぷらっと田町・三田 - 田町・三田を楽しむ古地図/絵地図街歩きアプリ」版">
