--- a/tamamuramap.html
+++ b/tamamuramap.html
@@ -18,11 +18,11 @@
       right: 0px;
     }
   </style>
-  <meta property="og:image" content="https://s.maplat.jp/r/tamamuramap/img/tamamura_splash.png">
+  <meta property="og:image" content="https://t.maplat.jp/r/tamamuramap/img/tamamura_splash.png">
   <meta name="twitter:card" content="summary">
-  <link rel="canonical" href="https://s.maplat.jp/r/tamamuramap/">
-  <link rel="alternate" href="https://s.maplat.jp/r/tamamuramap/?lang=ja" hreflang="ja">
-  <link rel="alternate" href="https://s.maplat.jp/r/tamamuramap/?lang=en" hreflang="en">
+  <link rel="canonical" href="https://t.maplat.jp/r/tamamuramap/">
+  <link rel="alternate" href="https://t.maplat.jp/r/tamamuramap/?lang=ja" hreflang="ja">
+  <link rel="alternate" href="https://t.maplat.jp/r/tamamuramap/?lang=en" hreflang="en">
   <link rel="manifest" href="./pwa/tamamura_manifest.json">
   <meta property="og:title" content="ぷらっと玉村">
   <meta name="description"
