--- a/tatebayashitestmap.html
+++ b/tatebayashitestmap.html
@@ -18,11 +18,11 @@
       right: 0px;
     }
   </style>
-  <meta property="og:image" content="https://s.maplat.jp/r/tatebayashitest/img/tatebayashi_splash.png">
+  <meta property="og:image" content="https://t.maplat.jp/r/tatebayashitest/img/tatebayashi_splash.png">
   <meta name="twitter:card" content="summary">
-  <link rel="canonical" href="https://s.maplat.jp/r/tatebayashitestmap/">
-  <link rel="alternate" href="https://s.maplat.jp/r/tatebayashitestmap/?lang=ja" hreflang="ja">
-  <link rel="alternate" href="https://s.maplat.jp/r/tatebayashitestmap/?lang=en" hreflang="en">
+  <link rel="canonical" href="https://t.maplat.jp/r/tatebayashitestmap/">
+  <link rel="alternate" href="https://t.maplat.jp/r/tatebayashitestmap/?lang=ja" hreflang="ja">
+  <link rel="alternate" href="https://t.maplat.jp/r/tatebayashitestmap/?lang=en" hreflang="en">
   <link rel="manifest" href="./pwa/tatebayashitest_manifest.json">
   <meta property="og:title" content="ぷらっと館林 - 館林を楽しむ古地図/絵地図街歩きアプリ">
   <meta name="description"
