--- a/tenrimap.html
+++ b/tenrimap.html
@@ -18,11 +18,11 @@
       right: 0px;
     }
   </style>
-  <meta property="og:image" content="https://s.maplat.jp/r/tenrimap/pwa/sample/apple-splash-1334-750.png">
+  <meta property="og:image" content="https://t.maplat.jp/r/tenrimap/pwa/sample/apple-splash-1334-750.png">
   <meta name="twitter:card" content="summary">
-  <link rel="canonical" href="https://s.maplat.jp/r/tenrimap/">
-  <link rel="alternate" href="https://s.maplat.jp/r/tenrimap/?lang=ja" hreflang="ja">
-  <link rel="alternate" href="https://s.maplat.jp/r/tenrimap/?lang=en" hreflang="en">
+  <link rel="canonical" href="https://t.maplat.jp/r/tenrimap/">
+  <link rel="alternate" href="https://t.maplat.jp/r/tenrimap/?lang=ja" hreflang="ja">
+  <link rel="alternate" href="https://t.maplat.jp/r/tenrimap/?lang=en" hreflang="en">
   <link rel="manifest" href="./pwa/tenri_manifest.json">
   <meta property="og:title" content="山の辺の道お世話アプリ">
   <meta name="description" content="紅葉の長岳寺と山の辺の道ミニお世話ツアー案内アプリ">
