--- a/yakushijimap.html
+++ b/yakushijimap.html
@@ -18,11 +18,11 @@
       right: 0px;
     }
   </style>
-  <meta property="og:image" content="https://s.maplat.jp/r/yakushijimap/img/yakushiji_splash.png">
+  <meta property="og:image" content="https://t.maplat.jp/r/yakushijimap/img/yakushiji_splash.png">
   <meta name="twitter:card" content="summary">
-  <link rel="canonical" href="https://s.maplat.jp/r/yakushijimap/">
-  <link rel="alternate" href="https://s.maplat.jp/r/yakushijimap/?lang=ja" hreflang="ja">
-  <link rel="alternate" href="https://s.maplat.jp/r/yakushijimap/?lang=en" hreflang="en">
+  <link rel="canonical" href="https://t.maplat.jp/r/yakushijimap/">
+  <link rel="alternate" href="https://t.maplat.jp/r/yakushijimap/?lang=ja" hreflang="ja">
+  <link rel="alternate" href="https://t.maplat.jp/r/yakushijimap/?lang=en" hreflang="en">
   <link rel="manifest" href="./pwa/yakushiji_manifest.json">
   <meta property="og:title" content="ぷらっと薬師寺">
   <meta name="description" content="ぷらっと薬師寺">
