--- a/chuokumap.html
+++ b/chuokumap.html
@@ -18,11 +18,11 @@
       right: 0px;
     }
   </style>
-  <meta property="og:image" content="https://s.maplat.jp/r/chuokumap/img/chuoku_splash.png">
+  <meta property="og:image" content="https://t.maplat.jp/r/chuokumap/img/chuoku_splash.png">
   <meta name="twitter:card" content="summary">
-  <link rel="canonical" href="https://s.maplat.jp/r/chuokumap/">
-  <link rel="alternate" href="https://s.maplat.jp/r/chuokumap/?lang=ja" hreflang="ja">
-  <link rel="alternate" href="https://s.maplat.jp/r/chuokumap/?lang=en" hreflang="en">
+  <link rel="canonical" href="https://t.maplat.jp/r/chuokumap/">
+  <link rel="alternate" href="https://t.maplat.jp/r/chuokumap/?lang=ja" hreflang="ja">
+  <link rel="alternate" href="https://t.maplat.jp/r/chuokumap/?lang=en" hreflang="en">
   <link rel="manifest" href="./pwa/chuoku_manifest.json">
   <meta property="og:title" content="ぷらっと東京中央区 - 東京都中央区を楽しむ古地図/絵地図街歩きアプリ">
   <meta name="description" content="古地図/絵地図街歩きアプリMaplat:「ぷらっと東京中央区 - 東京都中央区を楽しむ古地図/絵地図街歩きアプリ」版">
