--- a/geotenmap.html
+++ b/geotenmap.html
@@ -18,11 +18,11 @@
       right: 0px;
     }
   </style>
-  <meta property="og:image" content="https://s.maplat.jp/r/geotenmap/img/geoten_splash.png">
+  <meta property="og:image" content="https://t.maplat.jp/r/geotenmap/img/geoten_splash.png">
   <meta name="twitter:card" content="summary">
-  <link rel="canonical" href="https://s.maplat.jp/r/geotenmap/">
-  <link rel="alternate" href="https://s.maplat.jp/r/geotenmap/?lang=ja" hreflang="ja">
-  <link rel="alternate" href="https://s.maplat.jp/r/geotenmap/?lang=en" hreflang="en">
+  <link rel="canonical" href="https://t.maplat.jp/r/geotenmap/">
+  <link rel="alternate" href="https://t.maplat.jp/r/geotenmap/?lang=ja" hreflang="ja">
+  <link rel="alternate" href="https://t.maplat.jp/r/geotenmap/?lang=en" hreflang="en">
   <link rel="manifest" href="./pwa/geoten_manifest.json">
   <meta property="og:title" content="Maplat ジオ展2023向けデモサイト">
   <meta name="description" content="古地図/絵地図街歩きアプリMaplat:「Maplat ジオ展2023向けデモサイト」版">
