--- a/iwakimap.html
+++ b/iwakimap.html
@@ -18,11 +18,11 @@
       right: 0px;
     }
   </style>
-  <meta property="og:image" content="https://s.maplat.jp/r/iwakimap/img/iwaki_splash.png">
+  <meta property="og:image" content="https://t.maplat.jp/r/iwakimap/img/iwaki_splash.png">
   <meta name="twitter:card" content="summary">
-  <link rel="canonical" href="https://s.maplat.jp/r/iwakimap/">
-  <link rel="alternate" href="https://s.maplat.jp/r/iwakimap/?lang=ja" hreflang="ja">
-  <link rel="alternate" href="https://s.maplat.jp/r/iwakimap/?lang=en" hreflang="en">
+  <link rel="canonical" href="https://t.maplat.jp/r/iwakimap/">
+  <link rel="alternate" href="https://t.maplat.jp/r/iwakimap/?lang=ja" hreflang="ja">
+  <link rel="alternate" href="https://t.maplat.jp/r/iwakimap/?lang=en" hreflang="en">
   <link rel="manifest" href="./pwa/iwaki_manifest.json">
   <meta property="og:title" content="ぷらっといわき - いわきを楽しむ古地図/絵地図街歩きアプリ">
   <meta name="description" content="古地図/絵地図街歩きアプリMaplat:「ぷらっといわき - いわきを楽しむ古地図/絵地図街歩きアプリ」版">
