--- a/junen_naramap.html
+++ b/junen_naramap.html
@@ -18,11 +18,11 @@
       right: 0px;
     }
   </style>
-  <meta property="og:image" content="https://s.maplat.jp/r/junen_naramap/img/nara_splash.png">
+  <meta property="og:image" content="https://t.maplat.jp/r/junen_naramap/img/nara_splash.png">
   <meta name="twitter:card" content="summary">
-  <link rel="canonical" href="https://s.maplat.jp/r/junen_naramap/">
-  <link rel="alternate" href="https://s.maplat.jp/r/junen_naramap/?lang=ja" hreflang="ja">
-  <link rel="alternate" href="https://s.maplat.jp/r/junen_naramap/?lang=en" hreflang="en">
+  <link rel="canonical" href="https://t.maplat.jp/r/junen_naramap/">
+  <link rel="alternate" href="https://t.maplat.jp/r/junen_naramap/?lang=ja" hreflang="ja">
+  <link rel="alternate" href="https://t.maplat.jp/r/junen_naramap/?lang=en" hreflang="en">
   <link rel="manifest" href="./pwa/nara_manifest.json">
   <meta property="og:title" content="ぷらっと奈良 - 奈良を楽しむ古地図/絵地図街歩きアプリ">
   <meta name="description"
