--- a/minatokumap.html
+++ b/minatokumap.html
@@ -13,11 +13,11 @@
       right: 0px;
     }
   </style>
-  <meta property="og:image" content="https://s.maplat.jp/r/minatokumap/img/minatoku_splash.png">
+  <meta property="og:image" content="https://t.maplat.jp/r/minatokumap/img/minatoku_splash.png">
   <meta name="twitter:card" content="summary">
-  <link rel="canonical" href="https://s.maplat.jp/r/minatokumap/">
-  <link rel="alternate" href="https://s.maplat.jp/r/minatokumap/?lang=ja" hreflang="ja">
-  <link rel="alternate" href="https://s.maplat.jp/r/minatokumap/?lang=en" hreflang="en">
+  <link rel="canonical" href="https://t.maplat.jp/r/minatokumap/">
+  <link rel="alternate" href="https://t.maplat.jp/r/minatokumap/?lang=ja" hreflang="ja">
+  <link rel="alternate" href="https://t.maplat.jp/r/minatokumap/?lang=en" hreflang="en">
   <link rel="manifest" href="./pwa/minatoku_manifest.json">
   <meta property="og:title" content="ぷらっと東京港区 - 東京都港区を楽しむ古地図/絵地図街歩きアプリ">
   <meta name="description" content="古地図/絵地図街歩きアプリMaplat:「ぷらっと東京港区 - 東京都港区を楽しむ古地図/絵地図街歩きアプリ」版">
