--- a/mitomap.html
+++ b/mitomap.html
@@ -18,11 +18,11 @@
       right: 0px;
     }
   </style>
-  <meta property="og:image" content="https://s.maplat.jp/r/mitomap/img/mito_splash.png">
+  <meta property="og:image" content="https://t.maplat.jp/r/mitomap/img/mito_splash.png">
   <meta name="twitter:card" content="summary">
-  <link rel="canonical" href="https://s.maplat.jp/r/mitomap/">
-  <link rel="alternate" href="https://s.maplat.jp/r/mitomap/?lang=ja" hreflang="ja">
-  <link rel="alternate" href="https://s.maplat.jp/r/mitomap/?lang=en" hreflang="en">
+  <link rel="canonical" href="https://t.maplat.jp/r/mitomap/">
+  <link rel="alternate" href="https://t.maplat.jp/r/mitomap/?lang=ja" hreflang="ja">
+  <link rel="alternate" href="https://t.maplat.jp/r/mitomap/?lang=en" hreflang="en">
   <link rel="manifest" href="./pwa/mito_manifest.json">
   <meta property="og:title" content="ぷらっと水戸 - 水戸を楽しむ古地図/絵地図街歩きアプリ">
   <meta name="description"
