--- a/narajizomap.html
+++ b/narajizomap.html
@@ -18,11 +18,11 @@
       right: 0px;
     }
   </style>
-  <meta property="og:image" content="https://s.maplat.jp/r/narajizomap/pwa/sample/apple-splash-1334-750.png">
+  <meta property="og:image" content="https://t.maplat.jp/r/narajizomap/pwa/sample/apple-splash-1334-750.png">
   <meta name="twitter:card" content="summary">
-  <link rel="canonical" href="https://s.maplat.jp/r/narajizomap/">
-  <link rel="alternate" href="https://s.maplat.jp/r/narajizomap/?lang=ja" hreflang="ja">
-  <link rel="alternate" href="https://s.maplat.jp/r/narajizomap/?lang=en" hreflang="en">
+  <link rel="canonical" href="https://t.maplat.jp/r/narajizomap/">
+  <link rel="alternate" href="https://t.maplat.jp/r/narajizomap/?lang=ja" hreflang="ja">
+  <link rel="alternate" href="https://t.maplat.jp/r/narajizomap/?lang=en" hreflang="en">
   <link rel="manifest" href="./pwa/narajizo_manifest.json">
   <meta property="og:title" content="地蔵プロジェクト">
   <meta name="description" content="古地図/絵地図街歩きアプリMaplat:「地蔵プロジェクト」版">
