--- a/ohmihachimanmap.html
+++ b/ohmihachimanmap.html
@@ -13,11 +13,11 @@
       right: 0px;
     }
   </style>
-  <meta property="og:image" content="https://s.maplat.jp/r/ohmihachimanmap/img/ohmihachiman_splash.png">
+  <meta property="og:image" content="https://t.maplat.jp/r/ohmihachimanmap/img/ohmihachiman_splash.png">
   <meta name="twitter:card" content="summary">
-  <link rel="canonical" href="https://s.maplat.jp/r/ohmihachimanmap/">
-  <link rel="alternate" href="https://s.maplat.jp/r/ohmihachimanmap/?lang=ja" hreflang="ja">
-  <link rel="alternate" href="https://s.maplat.jp/r/ohmihachimanmap/?lang=en" hreflang="en">
+  <link rel="canonical" href="https://t.maplat.jp/r/ohmihachimanmap/">
+  <link rel="alternate" href="https://t.maplat.jp/r/ohmihachimanmap/?lang=ja" hreflang="ja">
+  <link rel="alternate" href="https://t.maplat.jp/r/ohmihachimanmap/?lang=en" hreflang="en">
   <link rel="manifest" href="./pwa/ohmihachiman_manifest.json">
   <meta property="og:title" content="ぷらっと近江八幡 - 近江八幡を楽しむ古地図/絵地図街歩きアプリ">
   <meta name="description" content="古地図/絵地図街歩きアプリMaplat:「ぷらっと近江八幡 - 近江八幡を楽しむ古地図/絵地図街歩きアプリ」版">
