--- a/tatsunomap.html
+++ b/tatsunomap.html
@@ -18,11 +18,11 @@
       right: 0px;
     }
   </style>
-  <meta property="og:image" content="https://s.maplat.jp/r/tatsunomap/pwa/sample/apple-splash-1334-750.png">
+  <meta property="og:image" content="https://t.maplat.jp/r/tatsunomap/pwa/sample/apple-splash-1334-750.png">
   <meta name="twitter:card" content="summary">
-  <link rel="canonical" href="https://s.maplat.jp/r/tatsunomap/">
-  <link rel="alternate" href="https://s.maplat.jp/r/tatsunomap/?lang=ja" hreflang="ja">
-  <link rel="alternate" href="https://s.maplat.jp/r/tatsunomap/?lang=en" hreflang="en">
+  <link rel="canonical" href="https://t.maplat.jp/r/tatsunomap/">
+  <link rel="alternate" href="https://t.maplat.jp/r/tatsunomap/?lang=ja" hreflang="ja">
+  <link rel="alternate" href="https://t.maplat.jp/r/tatsunomap/?lang=en" hreflang="en">
   <link rel="manifest" href="./pwa/tatsuno_manifest.json">
   <meta property="og:title" content="龍野城城下町アプリ">
   <meta name="description" content="古地図/絵地図街歩きアプリMaplat:「龍野城城下町アプリ」版">
