--- a/tsuwanomap.html
+++ b/tsuwanomap.html
@@ -18,11 +18,11 @@
       right: 0px;
     }
   </style>
-  <meta property="og:image" content="https://s.maplat.jp/r/tsuwanomap/img/tsuwano_splash.png">
+  <meta property="og:image" content="https://t.maplat.jp/r/tsuwanomap/img/tsuwano_splash.png">
   <meta name="twitter:card" content="summary">
-  <link rel="canonical" href="https://s.maplat.jp/r/tsuwanomap/">
-  <link rel="alternate" href="https://s.maplat.jp/r/tsuwanomap/?lang=ja" hreflang="ja">
-  <link rel="alternate" href="https://s.maplat.jp/r/tsuwanomap/?lang=en" hreflang="en">
+  <link rel="canonical" href="https://t.maplat.jp/r/tsuwanomap/">
+  <link rel="alternate" href="https://t.maplat.jp/r/tsuwanomap/?lang=ja" hreflang="ja">
+  <link rel="alternate" href="https://t.maplat.jp/r/tsuwanomap/?lang=en" hreflang="en">
   <link rel="manifest" href="./pwa/tsuwano_manifest.json">
   <meta property="og:title" content="ぷらっと津和野 - 津和野を楽しむ古地図/絵地図街歩きアプリ">
   <meta name="description" content="古地図/絵地図街歩きアプリMaplat:「ぷらっと津和野 - 津和野を楽しむ古地図/絵地図街歩きアプリ」版">
