立命館微調整

--- a/18mapcon_eamap.html
+++ b/18mapcon_eamap.html
@@ -12,12 +12,15 @@
       left: 0px;
       right: 0px;
     }
+    .maplat .ol-ctx-menu-container li {
+      white-space: normal;
+    }
   </style>
-  <meta property="og:image" content="https://t.maplat.jp/r/18mapcon_eamap/img/18mapcon_ea_splash.png">
+  <meta property="og:image" content="https://s.maplat.jp/r/18mapcon_eamap/img/18mapcon_ea_splash.png">
   <meta name="twitter:card" content="summary">
-  <link rel="canonical" href="https://t.maplat.jp/r/18mapcon_eamap/">
-  <link rel="alternate" href="https://t.maplat.jp/r/18mapcon_eamap/?lang=ja" hreflang="ja">
-  <link rel="alternate" href="https://t.maplat.jp/r/18mapcon_eamap/?lang=en" hreflang="en">
+  <link rel="canonical" href="https://s.maplat.jp/r/18mapcon_eamap/">
+  <link rel="alternate" href="https://s.maplat.jp/r/18mapcon_eamap/?lang=ja" hreflang="ja">
+  <link rel="alternate" href="https://s.maplat.jp/r/18mapcon_eamap/?lang=en" hreflang="en">
   <link rel="manifest" href="./pwa/18mapcon_ea_manifest.json">
   <meta property="og:title" content="第18回みんなでつくる地域の安全安心マップコンテスト優秀賞">
   <meta name="description" content="古地図/絵地図街歩きアプリMaplat:「第18回みんなでつくる地域の安全安心マップコンテスト優秀賞」版">
@@ -77,7 +80,6 @@
     overlay: true,
     enableHideMarker: true,
     enableBorder: true,
-    enableMarkerList: true,
     enableCache: true,
     stateUrl: true,
     enableShare: true,
