--- a/r_kinugasamap.html
+++ b/r_kinugasamap.html
@@ -13,11 +13,11 @@
       right: 0px;
     }
   </style>
-  <meta property="og:image" content="https://t.maplat.jp/r/r_kinugasamap/img/r_kinugasa_splash.png">
+  <meta property="og:image" content="https://s.maplat.jp/r/r_kinugasamap/img/r_kinugasa_splash.png">
   <meta name="twitter:card" content="summary">
-  <link rel="canonical" href="https://t.maplat.jp/r/r_kinugasamap/">
-  <link rel="alternate" href="https://t.maplat.jp/r/r_kinugasamap/?lang=ja" hreflang="ja">
-  <link rel="alternate" href="https://t.maplat.jp/r/r_kinugasamap/?lang=en" hreflang="en">
+  <link rel="canonical" href="https://s.maplat.jp/r/r_kinugasamap/">
+  <link rel="alternate" href="https://s.maplat.jp/r/r_kinugasamap/?lang=ja" hreflang="ja">
+  <link rel="alternate" href="https://s.maplat.jp/r/r_kinugasamap/?lang=en" hreflang="en">
   <link rel="manifest" href="./pwa/r_kinugasa_manifest.json">
   <meta property="og:title" content="マップコンテスト受賞会場_立命館衣笠">
   <meta name="description" content="古地図/絵地図街歩きアプリMaplat:「マップコンテスト受賞会場_立命館衣笠」版">
@@ -77,7 +77,6 @@
     overlay: true,
     enableHideMarker: true,
     enableBorder: true,
-    enableMarkerList: true,
     enableCache: true,
     stateUrl: true,
     enableShare: true,
