--- a/kyotomap.html
+++ b/kyotomap.html
@@ -4,10 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>ぷらっと京都 - 京都を楽しむ古地図/絵地図街歩きアプリ</title>
-
+  <meta content="yes" name="apple-mobile-web-app-capable">
   <meta name="viewport"
     content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
-
   <link rel="stylesheet" href="assets/maplat.css">
   <style>
     .mainview {
