--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <base href="/">
   <meta charset="UTF-8">
   <title>Maplat</title>
   <meta content="yes" name="apple-mobile-web-app-capable">
