Update GPS button function: alwaysGpsOn: false

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
     <div id="map_div"></div>
   </div>
 
+  <script src="js/geolocate.js"></script>
   <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.js"></script>
   <script type="module" src="./demo/dev.ts"></script>
 </body>
