--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <link rel="apple-touch-icon" href="pwa/sample/apple-icon-180.png">
 
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
 
   <link rel="apple-touch-startup-image" href="pwa/sample/apple-splash-2048-2732.png"
     media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
